Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-12969

[C++] match_substring doesn't match empty needle to empty haystack

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 4.0.0, 4.0.1
    • 5.0.0
    • C++

    Description

      >>> import pyarrow as pa, pyarrow.compute as pc
      >>> pa.__version__
      '4.0.0'
      >>> pc.match_substring(["", "a"], "")
      <pyarrow.lib.BooleanArray object at 0x7fd8a77888e0>
      [
        false,
        true
      ]
      >>> "" in ""
      True 

      Also confirmed with PyArrow 4.0.1.

      Attachments

        Issue Links

          Activity

            People

              lidavidm David Li
              lidavidm David Li
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 0.5h
                  0.5h