ARROW-12969: [C++] Fix match_substring with empty haystack

Closes #10453 from lidavidm/arrow-12969

Authored-by: David Li <li.davidm96@gmail.com>
Signed-off-by: Antoine Pitrou <antoine@python.org>